[package]
name = "handlebars-gotham"
version = "0.1.0"
authors = ["Ning Sun <sunng@about.me>"]
description = "Handlebars templating middleware for Gotham."
license = "MIT"
keywords = ["handlebars", "templating", "web", "webdev", "gotham"]
homepage = "https://github.com/sunng87/handlebars-gotham"
repository = "https://github.com/sunng87/handlebars-gotham"
documentation = "https://docs.rs/handlebars-gotham/"
readme = "README.md"

[dependencies]
handlebars = "^0.32.0"
gotham = "^0.2.0"
gotham_derive = "^0.2.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
futures = "^0.1.14"
hyper = "^0.11.2"
mime = "^0.3.3"
walkdir = "^1.0"
log = "^0.4"

[dev-dependencies]
serde_derive = "^1.0.0"
env_logger = "^0.5.9"
maplit = "^1.0.1"
